BusOne/src/objects/EM_Attendee_vod__c.object
<CustomObject>
    <description>Attendees at events for Veeva Events Management</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account acting as an Attendee.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>EM_Attendee_Account_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Line_1_vod__c</fullName>
        <description>Used to store the attendee&apos;s street address.</description>
        <label>Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2_vod__c</fullName>
        <description>Used to store the attendee&apos;s street address.</description>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Name_vod__c</fullName>
        <description>Text field to store the name of an attendee. Used for entering non-system attendees. If an account, user, or contact is listed as an attendee, this field populates automatically.</description>
        <label>Attendee Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Type_vod__c</fullName>
        <description>This field defines what type of Attendee has been selected for the Event. This formula can be modified to meet the naming conventions of a Customer&apos;s organization.</description>
        <formula>IF(NOT(ISBLANK(Account_vod__c)), $Label.ACCOUNT_vod, 
                IF(NOT(ISBLANK(Contact_vod__c)), $Label.CONTACT_vod, 
                IF(NOT(ISBLANK(User_vod__c)), $Label.USER_vod, 
                IF(NOT(ISBLANK(TEXT(Walk_In_Status_vod__c))), $Label.WALK_IN_vod, 
                $Label.ONLINE_REGISTRANT_vod))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_vod__c</fullName>
        <description>Used to store the attendee&apos;s city.</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact attending the event.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>EM_Attendee_Contact_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credentials_vod__c</fullName>
        <description>Attendee Credentials. If the attendee is an Account, this data is copied from the Credentials_vod field on the account.</description>
        <label>Credentials</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DO</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>RN</fullName>
                </value>
                <value>
                    <fullName>RNP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_vod__c</fullName>
        <description>Used to store the attendee&apos;s email address.</description>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Time_vod__c</fullName>
        <description>End time of the event</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Entity_Reference_Id_vod__c</fullName>
        <description>ID of object associated with the attendee such as an account.</description>
        <label>Entity Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The event that the attendee has been invited to.</description>
        <label>Event</label>
        <referenceTo>EM_Event_vod__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>EM_Attendee_Event_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name_vod__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Furigana_vod__c</fullName>
        <description>Firigana for Japanese name. If the attendee is an Account, this data is copied from the Furigana field on the account.</description>
        <label>Furigana</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_vod__c</fullName>
        <description>Used to store the attendee&apos;s last name</description>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meal_Opt_In_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate if an attendee has opted in to receiving a meal.</description>
        <label>Meal Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meal_Preference_vod__c</fullName>
        <description>Meal preference of an attendee. Custom values can be added to this picklist.</description>
        <label>Meal Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vegetarian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Field used by mobile products for synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Online_Registration_Status_vod__c</fullName>
        <description>This field is populated automatically to &quot;Needs Reconciliation&quot; when a person is registered for an event via the Veeva Attendee API. The status can be set manually via this API, and is also set through the user interface when an online event registrant is reconciled to a CRM record.</description>
        <label>Online Registration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs_Reconciliation_vod</fullName>
                </value>
                <value>
                    <fullName>Reconciled_To_Existing_Account_vod</fullName>
                </value>
                <value>
                    <fullName>Reconciled_To_Existing_User_vod</fullName>
                </value>
                <value>
                    <fullName>Reconciled_To_New_Account_vod</fullName>
                </value>
                <value>
                    <fullName>Dismissed_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <description>Organization name of the attendee</description>
        <label>Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_vod__c</fullName>
        <description>The organization an attendee is representing.</description>
        <label>Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for data loads.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_vod__c</fullName>
        <description>Used to store the attendee&apos;s phone number.</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Prescriber_vod__c</fullName>
        <description>Indicates if an attendee is a prescriber or not.</description>
        <label>Prescriber</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes_vod</fullName>
                </value>
                <value>
                    <fullName>No_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signature_Datetime_vod__c</fullName>
        <description>Stores the Datetime of when the Signature was captured</description>
        <label>Signature Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signature_vod__c</fullName>
        <description>Used to store the Signature.</description>
        <label>Signature</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Signee_vod__c</fullName>
        <description>The name of the person signing for event attendance.</description>
        <label>Signee</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time_vod__c</fullName>
        <description>Start time of the event</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status of the person invited to the medical event.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nominated_vod</fullName>
                </value>
                <value>
                    <fullName>Approved_vod</fullName>
                </value>
                <value>
                    <fullName>Invited_vod</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Accepted_vod</fullName>
                </value>
                <value>
                    <fullName>Rejected_vod</fullName>
                </value>
                <value>
                    <fullName>Attended_vod</fullName>
                </value>
                <value>
                    <fullName>Signed_vod</fullName>
                </value>
                <value>
                    <fullName>Cleared_Signature_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stub_Mobile_Id_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Stub Mobile Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Stub_SFDC_Id_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Stub SFDC Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Title_vod__c</fullName>
        <description>Attendee Title. If the attendee is an Account, this data is copied from the PersonTitle field on the account.</description>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User attending the event.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>EM_Attendee_User_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vessel_Number_vod__c</fullName>
        <description>Used to store travel details, such as a flight or train number.</description>
        <label>Vessel Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Walk_In_Reference_ID_vod__c</fullName>
        <description>Reference ID of the person associated with the reconciled attendee. Required for backend attendee reconciliation process.</description>
        <label>Walk In Reference ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Walk_In_Status_vod__c</fullName>
        <description>Used to track the status of walk-in attendees at an event.</description>
        <label>Walk-In Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs_Reconciliation_vod</fullName>
                </value>
                <value>
                    <fullName>Reconciled_To_Existing_Account_vod</fullName>
                </value>
                <value>
                    <fullName>Reconciled_To_Existing_User_vod</fullName>
                </value>
                <value>
                    <fullName>Reconciled_To_New_Account_vod</fullName>
                </value>
                <value>
                    <fullName>Dismissed_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Webinar_Participant_URL_vod__c</fullName>
        <label>Webinar Participant URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_vod__c</fullName>
        <description>Used to store the attendee&apos;s zip code.</description>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Attendee</label>
    <nameField>
        <displayFormat>EA-{0000000000}</displayFormat>
        <label>Attendee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <recordTypes>
        <fullName>Attendee_vod</fullName>
        <active>true</active>
        <description>Attendee</description>
        <label>Attendee_vod</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Event_Team_Member_vod__c</fullName>
        <label>Event Team Member</label>
    </sharingReasons>
</CustomObject>